get collections handler
